actualizacion readme , añade pasos para ejecución